--- a/e-sensing.bib
+++ b/e-sensing.bib
@@ -1356,6 +1356,18 @@
   pages = {71}
 }
 
+@article{Besag1991,
+  title = {Bayesian Image Restoration, with Two Applications in Spatial Statistics},
+  author = {Besag, Julian and York, Jeremy and Molli{\'e}, Annie},
+  year = {1991},
+  journal = {Annals of the Institute of Statistical Mathematics},
+  volume = {43},
+  number = {1},
+  pages = {1--20},
+  issn = {1572-9052},
+  doi = {10.1007/BF00116466}
+}
+
 @article{Beuchle2015,
   title = {Land Cover Changes in the {{Brazilian Cerrado}} and {{Caatinga}} Biomes from 1990 to 2010 Based on a Systematic Remote Sensing Sampling Approach},
   author = {Beuchle, Rene and Grecchi, Rosana and Shimabukuro, Yosio and Seliger, Roman and Eva, Hugh and Sano, Edson and Achard, Frederic},
@@ -1387,6 +1399,16 @@
   isbn = {978-3-540-46621-5}
 }
 
+@book{Bivand2013,
+  title = {Applied {{Spatial Data Analysis}} with {{R}}},
+  author = {Bivand, Roger S. and Pebesma, Edzer and {G{\'o}mez-Rubio}, Virgilio},
+  year = {2013},
+  publisher = {{Springer}},
+  address = {{New York, NY}},
+  doi = {10.1007/978-1-4614-7618-4},
+  isbn = {978-1-4614-7617-7 978-1-4614-7618-4}
+}
+
 @article{Bivand2018,
   title = {Comparing Implementations of Global and Local Indicators of Spatial Association},
   author = {Bivand, Roger S. and Wong, David W. S.},
@@ -1397,6 +1419,16 @@
   pages = {716--748},
   issn = {1133-0686, 1863-8260},
   doi = {10.1007/s11749-018-0599-x}
+}
+
+@book{Bivand2023,
+  title = {Spatial {{Data Science}}: {{With Applications}} in {{R}}},
+  author = {Bivand, Roger, Edzer Pebesma},
+  year = {2023},
+  publisher = {{Chapman and Hall/CRC}},
+  address = {{New York}},
+  doi = {10.1201/9780429459016},
+  isbn = {978-0-429-45901-6}
 }
 
 @article{Blaschke2010,
@@ -2444,6 +2476,20 @@
   doi = {10.1016/j.rse.2018.09.002}
 }
 
+@article{Clayton1987,
+  title = {Empirical {{Bayes Estimates}} of {{Age-Standardized Relative Risks}} for {{Use}} in {{Disease Mapping}}},
+  author = {Clayton, David and Kaldor, John},
+  year = {1987},
+  journal = {Biometrics},
+  volume = {43},
+  number = {3},
+  eprinttype = {jstor},
+  pages = {671--681},
+  publisher = {{[Wiley, International Biometric Society]}},
+  issn = {0006-341X},
+  doi = {10.2307/2532003}
+}
+
 @inproceedings{Clementini1993,
   title = {A Small Set of Formal Topological Relationships Suitable for End-User Interaction},
   booktitle = {Advances in {{Spatial Databases}}},
@@ -2845,6 +2891,19 @@
   journal = {Nature},
   volume = {481},
   pages = {321--328}
+}
+
+@article{Dawid1981,
+  title = {Conjugate Bayesian Inference for Structural Models},
+  author = {Dawid, A.P. and Guttman, I.},
+  year = {1981},
+  journal = {Communications in Statistics - Theory and Methods},
+  volume = {10},
+  number = {8},
+  pages = {739--748},
+  publisher = {{Taylor \& Francis}},
+  issn = {0361-0926},
+  doi = {10.1080/03610928108828071}
 }
 
 @article{Dean2008,
@@ -4296,10 +4355,10 @@
   isbn = {978-3-540-32202-3}
 }
 
-@book{Gelman2013,
+@book{Gelman2014,
   title = {Bayesian {{Data Analysis}}, {{Third Edition}}},
   author = {Gelman, Andrew and Carlin, John B. and Stern, Hal S. and Dunson, David B. and Vehtari, Aki and Rubin, Donald B.},
-  year = {2013},
+  year = {2014},
   publisher = {{CRC Press}},
   googlebooks = {ZXL6AQAAQBAJ},
   isbn = {978-1-4398-4095-5}
@@ -5288,6 +5347,12 @@
   title = {Raster: {{Geographic Data Analysis}} and {{Modeling}}},
   author = {Hijmans, Robert J.},
   year = {2015}
+}
+
+@techreport{Hijmans2023,
+  title = {Spatial {{Data Science}} with {{R}} and ``Terra'' \textemdash{} {{R Spatial}}},
+  author = {Hijmans, Robert},
+  year = {2023}
 }
 
 @article{Hilson2002,
@@ -6695,6 +6760,18 @@
   annotation = {Bandiera\_abtest: a Cg\_type: Nature Research Journals Primary\_atype: Reviews Subject\_term: Computer science;Mathematics and computing Subject\_term\_id: computer-science;mathematics-and-computing}
 }
 
+@article{Lee2013,
+  title = {{{CARBayes}}: {{An R Package}} for {{Bayesian Spatial Modeling}} with {{Conditional Autoregressive Priors}}},
+  author = {Lee, Duncan},
+  year = {2013},
+  journal = {Journal of Statistical Software},
+  volume = {55},
+  pages = {1--24},
+  issn = {1548-7660},
+  doi = {10.18637/jss.v055.i13},
+  copyright = {Copyright (c) 2012 Duncan Lee}
+}
+
 @article{Lei2020,
   title = {The Roles of Criteria, Data and Classification Methods in Designing Land Cover Classification Systems: Evidence from Existing Land Cover Data Sets},
   author = {Lei, Guangbin and Li, Ainong and Bian, Jinhu and Zhengjian, Zhang},
@@ -6920,6 +6997,13 @@
   pages = {102640},
   issn = {0303-2434},
   doi = {10.1016/j.jag.2021.102640}
+}
+
+@manual{Li2022,
+  type = {Manual},
+  title = {Rgeoda: {{R}} Library for Spatial Data Analysis},
+  author = {Li, Xun and Anselin, Luc},
+  year = {2022}
 }
 
 @article{Liao2005,
@@ -7324,6 +7408,18 @@
   address = {{Berlin, Heidelberg}},
   doi = {10.1007/978-3-540-39923-0_3},
   isbn = {978-3-540-39923-0}
+}
+
+@article{Marshall1991,
+  title = {Mapping {{Disease}} and {{Mortality Rates Using Empirical Bayes Estimators}}},
+  author = {Marshall, Roger J.},
+  year = {1991},
+  journal = {Journal of the Royal Statistical Society Series C: Applied Statistics},
+  volume = {40},
+  number = {2},
+  pages = {283--294},
+  issn = {0035-9254},
+  doi = {10.2307/2347593}
 }
 
 @article{Martinelli2010,
@@ -8430,13 +8526,6 @@
   pages = {439},
   issn = {2073-4859},
   doi = {10.32614/RJ-2018-009}
-}
-
-@misc{Pebesma2023,
-  title = {Spatial {{Data Science}}},
-  author = {Pebesma, Edzer and Bivand, Roger S.},
-  year = {2023},
-  howpublished = {https://r-spatial.org/book/}
 }
 
 @article{Pekel2016,
